* Created the D&B page. * Added a link to the newly created D&B page from the footer. * Scss updates to the header to fix a few responsive issues. * Added the global max width container to the Federal Account Summary page. Corrected inconsistent font treatment and padding/margin issues. * I updated the ‘fullSectionWrap’ mixin and had to adjust the call to that mixin in all of the files where it was being used.

--- a/src/_scss/core/_variables.scss
+++ b/src/_scss/core/_variables.scss
@@ -12,7 +12,7 @@ $h4-font-size:        rem(30px);
 $h5-font-size:        rem(24px);
 $h6-font-size:        rem(19px);
 $base-line-height:    1.5;
-$heading-line-height: 1.3;
+$heading-line-height: 1.2;
 $lead-line-height:    1.7;
 
 $font-sans:           'Source Sans Pro', $helvetica;
