--- a/src/_scss/layouts/default/header/nav/_menuItem.scss
+++ b/src/_scss/layouts/default/header/nav/_menuItem.scss
@@ -1,8 +1,7 @@
 @mixin headerNavMenuItem {
-    height: 4.8rem;
+    height: rem(48);
     margin: 0;
-    padding: 1.3rem 1.5rem 1.7rem;
-    vertical-align: middle;
+    padding: 0 rem(15);
     a {
         color: $color-gray;
         font-size: $base-font-size;
