--- a/src/_scss/mixins/elementContainerWrap.scss
+++ b/src/_scss/mixins/elementContainerWrap.scss
@@ -1,20 +1,21 @@
 //PAGE WRAPPER WITH WHITE BACKGROUND AND SLIGHT SHADOW USED TO WRAP THE CONTENT OF ENTIRE PAGES
+//@import "../../mixins/elementContainerWrap";
+//@include elementContainerWrap();
 @mixin elementContainerWrap {
     @include outer-container(100%);
-    padding: 0;
     background-color: $color-white;
+    border-bottom: rem(1) solid $color-gray-border;
+    border-right: rem(1) solid $color-gray-border;
+    border-top: rem(1) solid $color-gray-border;
     box-shadow: $container-shadow;
     color: $color-base;
-    padding: 0 rem(30);
-    border-top: 1px solid $color-gray-border;
-    border-right: 1px solid $color-gray-border;
-    border-bottom: 1px solid $color-gray-border;
-    margin: rem(30) $outer-gutter/2;
+    margin: rem(30) $outer-gutter/2 rem(60);
+    padding: 0 rem(30) rem(15);
     @include media($large-screen) {
-        margin: rem(30) $outer-gutter;
+        margin: rem(30) $outer-gutter rem(60);
     }
     @include media($x-large-screen) {
         max-width: $site-max-width;
-        margin: rem(30) auto;
+        margin: rem(30) auto rem(60);
     }
 }
